cleanup-dpol/cleanup-bare-pods/.chainsaw-test/chainsaw-step-02-assert-1.yaml
apiVersion: policies.kyverno.io/v1
kind: DeletingPolicy
metadata:
  name: clean-bare-pods
